Fix z-index of sidebar

--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -419,7 +419,7 @@
 
   height: 200px;
 
-  z-index: 2000;
+  z-index: 500;
 }
 @media screen and (max-width: 768px) {
   .category-tag__list {
